# mcp-registry-crewai-demo-agent

./: .gitignore  README.md  note_taker.py  orchestrator.py  pyproject.toml  requirements.txt  slack_app.py  test_crew.py  test_crew2.py  test_crew3.py  test_crew4.py  test_crew_code_exection.py  webhook_server.py  working_demo.py
.github/actions/kickoff-agent/: action.yml
.github/workflows/: main.yml
skill_registry_crew/: __init__.py  crew.py  main.py
