[project]
name = "demo-crew-runtime"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.114.0",
    "dotenv>=0.9.9",
    "mcp>=1.6.0",
    "mcpadapt>=0.1.0",
    "keboola.skill_registry_mcp>=0.0.8",
]

[tool.setuptools]
# Explicitly declare the Python module(s) at the root level
# to resolve ambiguity for the build process.
py-modules = ["task_crew"]
